--- a/ui/apps/dashboard/index.html
+++ b/ui/apps/dashboard/index.html
@@ -18,9 +18,9 @@ limitations under the License.
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/dcn_lab_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>DCN Dashboard</title>
     <script>
       // assume that __path_prefix__ in the form of '/xxx/aaa'
       // start with slash and not end with slash
