change ml platform name

--- a/ui/apps/dashboard/index.html
+++ b/ui/apps/dashboard/index.html
@@ -20,7 +20,7 @@ limitations under the License.
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/dcn_lab_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DCN Dashboard</title>
+    <title>ML Platform - Admin Portal</title>
     <script>
       // assume that __path_prefix__ in the form of '/xxx/aaa'
       // start with slash and not end with slash
